# spectrum-analyzer

./: LICENSE  README.md
scr/: core.py  fitting.py  pyproject.toml
scr/spectrum_analyzer/: fitting.py
src/spectrum_analyzer/: core.py  fit_results_1.txt  fitted_peaks_output.csv  fitting.py  ge_co_spec.txt  na_co.txt  na_cs.txt  test.ipynb
tests/: test_fitting.py
