[project]
name = "spectrum-analyzer"
version = "0.1.0"
authors = [{name = "Your Name"}]
description = "Interactive spectrum analysis tool with peak fitting"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyqt5"  # or "pyside2"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
